# ecr-cleanup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  SECURITY.md  index.yaml  main.py  pyproject.toml  renovate.json  test_main.py
.github/workflows/: chart-releaser.yaml  codeql.yml  docker-build-publish.yaml  lint.yaml  test.yaml  trivy.yaml
charts/ecr-cleanup/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/ecr-cleanup/templates/: cronjob.yaml  rbac.yaml
deploy/chart/ecr-cleanup/: Chart.yaml  README.md  values.schema.json  values.yaml
deploy/chart/ecr-cleanup/templates/: _helpers.tpl  cronjob.yaml  serviceaccount.yaml
deploy/helm/ecr-cleanup/: Chart.yaml  README.md  values.schema.json  values.yaml
deploy/helm/ecr-cleanup/templates/: rbac.yaml
deploy/kustomize/: cronjob.yaml  serviceaccount.yaml
kustomize/: rbac.yaml
