[project]
name = "ecr-image-cleanup-job"
version = "0.3.4"
description = "Kubernetes-aware cleanup job for pruning unused AWS ECR images."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hans Knecht", email = "contact@hans-knecht.com" }]
dependencies = [
    "boto3>=1.26.98",
    "kubernetes>=28.0.0",
    "pytz>=2022.7.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.2.2",
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.4",
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = []

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
